@@ -47,7 +47,7 @@ public class AutoConfigurations extends Configurations implements Ordered {
 
 	@Override
 	protected Collection<Class<?>> sort(Collection<Class<?>> classes) {
-		List<String> names = classes.stream().map(Class::getName).collect(Collectors.toList());
+		List<String> names = classes.stream().map(Class::getName).toList();
 		List<String> sorted = SORTER.getInPriorityOrder(names);
 		return sorted.stream()
 			.map((className) -> ClassUtils.resolveClassName(className, null))
